k8s/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: random-meme
  labels:
    app: random-meme
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: random-meme
