k8s/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: random-meme
  labels:
    app: random-meme
spec:
  to:
    kind: Service
    name: random-meme
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
